<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pt.nutrium.nutriumlunchdecider.activities.MainActivity">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="50"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort_price"
        android:orderInCategory="100"
        android:title="@string/action_sort_price"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_distance"
        android:orderInCategory="200"
        android:title="@string/action_sort_distance"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="800"
        android:title="@string/action_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="900"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>